[gd_scene load_steps=4 format=3 uid="uid://cndr2wek11plb"]

[ext_resource type="Script" path="res://Scenes/Tools/Weapons/Ranged/VoidBolt.gd" id="2_lrcr7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8o71w"]
radius = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_387sk"]
bg_color = Color(0.34902, 0, 0.34902, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="VoidBolt" type="Area2D" groups=["projectile"]]
z_index = 1
y_sort_enabled = true
scale = Vector2(0.2, 0.2)
collision_layer = 32
script = ExtResource("2_lrcr7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8o71w")

[node name="Sprite2D" type="Sprite2D" parent="."]
region_rect = Rect2(4.96429, 522.277, 53.5905, 43.952)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_387sk")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
scale = Vector2(1.6, 1.6)

[node name="Timeout" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="body_entered" from="." to="." method="EnemyHit"]
[connection signal="body_entered" from="." to="." method="TileMapEntered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="VoidBoltLeftScreen"]
[connection signal="timeout" from="Timeout" to="." method="VoidBoltTimeout"]
